Add files, update .gitignore, modify Interfaces.html layout
Add .aidda/commit.stamp with mode 100644

summary of diff --git  a/.aidda/commit.stamp b/.aidda/commit.stamp

- Add a new file named .aidda/commit.stamp
- Set file mode to 100644

Add `.aidda/generate.stamp` with mode 100644.

summary of diff --git  a/.aidda/generate.stamp b/.aidda/generate.stamp

- Add a new file named `.aidda/generate.stamp`
- Set file mode to 100644

Create .aidda/ignore to exclude .git, .idea, .grok, go, nv.shada

summary of diff --git  a/.aidda/ignore b/.aidda/ignore

- Add a new file named .aidda/ignore
- Set the file mode to 100644
- Ignore directories and files beginning with .git
- Ignore directories and files beginning with .idea
- Ignore files starting with .grok
- Ignore files starting with go
- Ignore files ending with nv.shada

Create .aidda/prompt with commit instructions and system message

summary of diff --git  a/.aidda/prompt b/.aidda/prompt

- Create a new file .aidda/prompt with mode 100644
- Add instructions to the prompt file for writing commit messages
- Specify system message for an expert Go programmer in the prompt file
- List input files: .Interfaces.html.swp, Interfaces.html, LICENSE, README.md, employee/main.go in the prompt file
- List output files: .Interfaces.html.swp, Interfaces.html, LICENSE, README.md, employee/main.go in the prompt file

Ignore .grok and .grok.lock files in .gitignore file.

summary of diff --git  a/.gitignore b/.gitignore

- Add .grok file to .gitignore
- Add .grok.lock file to .gitignore

Add line, update heading, move section header downwards.

summary of diff --git  a/Interfaces.html b/Interfaces.html

- Add a separator line before the Specialized Structs section
- Update the heading format for the Example: Specialized Structs section
- Move the section header for Example: Specialized Structs down two lines

--- a/Interfaces.html
+++ b/Interfaces.html
@@ -114,13 +114,16 @@ type Writer struct {
     GenericEmployee
     GenresWritten []string
 }
----
-### Example: Specialized Structs
 
 func (w Writer) Skills() []string {
     return w.GenresWritten
 }
 ```
+
+---
+
+## Example: Specialized Structs
+
 ### Maker
 ```go
 type Maker struct {
