Add panic to GenericEmployee's Skills; override in roles.
Add panic in Skills of GenericEmployee; override in roles.

summary of diff --git  a/Interfaces.html b/Interfaces.html

- Add a panic statement in the Skills function of GenericEmployee
- Indicate the Skills function should be overridden by specific roles like Writer, Artist, and Maker

Add panic in Skills of GenericEmployee; enforce override.

summary of diff --git  a/employee/main.go b/employee/main.go

- Add a panic statement to the Skills method in GenericEmployee
- Indicate that the Skills method should not be called and must be overridden by specific implementations like Writer, Artist, and Maker

--- a/Interfaces.html
+++ b/Interfaces.html
@@ -99,6 +99,7 @@ func (g GenericEmployee) WorkDetails() (int, int) {
 }
 
 func (g GenericEmployee) Skills() []string {
+	panic("Not implemented -- should be overridden by e.g. Writer, Artist, and Maker.")
     return []string{} // Placeholder
 }
 ```
