Updated slides with informaton from 1-1

--- a/Interfaces.html
+++ b/Interfaces.html
@@ -195,6 +195,15 @@ func MostSenior(eList []Employee) Employee {
 2. **Embedding**: Reuse and extend functionality.
 3. **Interfaces**: Enable abstraction and polymorphism.
 
+---
+
+## Thank You!
+
+Questions?  
+
+**Repo**: [Workshop Interfaces GitHub](https://github.com/ciwg/workshop-2025-01-28-go-interfaces).
+
+Disscusion points on following slides
 
 ---
 
@@ -236,6 +245,19 @@ func (m MockStorage) RetrieveHash(hash string) ([]byte, error) {
 
 ---
 
+Examples from my mocking  code 
+*** from my mocking  code        ***
+
+
+
+```
+Example from my code
+
+```
+
+
+---
+
 ## Real-World Use Cases
 
 - **PromiseGrid**: Uses a **library of hashes** → perfect for an interface-based design.
@@ -254,11 +276,7 @@ type DistributedFile interface {
 ---
 
 
-## Thank You!
 
-Questions?  
-
-**Repo**: [Workshop Interfaces GitHub](https://github.com/ciwg/workshop-2025-01-28-go-interfaces).
    </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script>
