--- a/Interfaces.html
+++ b/Interfaces.html
@@ -196,6 +196,86 @@ func MostSenior(eList []Employee) Employee {
 3. **Interfaces**: Enable abstraction and polymorphism.
 
 ---
+## Using :GoImplements in Vim
+
+- `:GoImplements` helps find implementations of an interface.
+- Useful for navigating and understanding Go code in Vim.
+
+---
+
+## Example 1: Finding Implementations of Employee
+
+1. Place the cursor on `Employee` in the interface definition.
+2. Run `:GoImplements` in Vim.
+3. Expected Output:
+   - `GenericEmployee`
+   - `Writer`
+   - `Artist`
+   - `Maker`
+
+### Employee Interface:
+```go
+type Employee interface {
+    Name() string
+    Email() string
+    WorkDetails() (int, int)
+    Skills() []string
+}
+```
+
+---
+
+## Example 2: Checking a Struct's Implementation
+
+1. Place the cursor on `Skills()` in the `Maker` struct.
+2. Run `:GoImplements` in Vim.
+3. Expected Output:
+   - Shows `Maker` implements `Employee`.
+
+### Maker Struct:
+```go
+type Maker struct {
+    GenericEmployee
+    ProjectsWorkedOn []string
+}
+
+func (m Maker) Skills() []string {
+    return m.ProjectsWorkedOn
+}
+```
+
+---
+
+## Example 3: Checking GenericEmployee
+
+1. Place the cursor on `GenericEmployee`.
+2. Run `:GoImplements` in Vim.
+3. Expected Output:
+   - `GenericEmployee` implements `Employee`, but `Skills()` panics.
+
+### GenericEmployee Struct:
+```go
+type GenericEmployee struct {
+    FullName             string
+    EmailAddress         string
+    WeeksWorkedAtCompany int
+    HoursWorkedPerWeek   int
+}
+
+func (g GenericEmployee) Skills() []string {
+    panic("Not implemented -- should be overridden.")
+    return []string{}
+}
+```
+
+---
+
+## Summary
+
+- `:GoImplements` helps find struct implementations of an interface.
+- Great for navigating and debugging Go code in Vim.
+- Works best when used on **interface names** or **struct methods**.
+
 
 ## Thank You!
 
@@ -333,10 +413,142 @@ type DistributedFile interface {
 
 
 
-   </textarea>
+   
+---
+
+## Switching Between Production and Test Implementations
+
+- Use **interfaces** to abstract functionality.
+- Implement **real services** for production and **mock services** for testing.
+- Allows seamless swapping during tests without modifying main code.
+
+---
+
+### Interface Definition
+
+```go
+type AuthService interface {
+    GetClient(config *oauth2.Config) (*http.Client, error)
+}
+```
+- Defines a common contract for authentication.
+- Both production and mock implementations must satisfy this interface.
+
+---
+
+### Production vs. Mock Implementation
+
+**Production (Real OAuth Client)**:
+```go
+type AuthGoogleService struct{}
+
+func (s *AuthGoogleService) GetClient(config *oauth2.Config) (*http.Client, error) {
+    ctx := context.Background()
+    token, err := config.Exchange(ctx, "auth-code")
+    if err != nil {
+        return nil, err
+    }
+    return config.Client(ctx, token), nil
+}
+```
+
+**Mock (Used for Testing)**:
+```go
+type MockAuthService struct{}
+
+func (m *MockAuthService) GetClient(config *oauth2.Config) (*http.Client, error) {
+    return &http.Client{}, nil
+}
+```
+- Use **MockAuthService** in tests to avoid real API calls.
+
+
+---
+
+## Using :GoImplements in Vim
+
+- `:GoImplements` helps find implementations of an interface.
+- Useful for navigating and understanding Go code in Vim.
+
+---
+
+## Example 1: Finding Implementations of Employee
+
+1. Place the cursor on `Employee` in the interface definition.
+2. Run `:GoImplements` in Vim.
+3. Expected Output:
+   - `GenericEmployee`
+   - `Writer`
+   - `Artist`
+   - `Maker`
+
+### Employee Interface:
+```go
+type Employee interface {
+    Name() string
+    Email() string
+    WorkDetails() (int, int)
+    Skills() []string
+}
+```
+
+---
+
+## Example 2: Checking a Struct's Implementation
+
+1. Place the cursor on `Skills()` in the `Maker` struct.
+2. Run `:GoImplements` in Vim.
+3. Expected Output:
+   - Shows `Maker` implements `Employee`.
+
+### Maker Struct:
+```go
+type Maker struct {
+    GenericEmployee
+    ProjectsWorkedOn []string
+}
+
+func (m Maker) Skills() []string {
+    return m.ProjectsWorkedOn
+}
+```
+
+---
+
+## Example 3: Checking GenericEmployee
+
+1. Place the cursor on `GenericEmployee`.
+2. Run `:GoImplements` in Vim.
+3. Expected Output:
+   - `GenericEmployee` implements `Employee`, but `Skills()` panics.
+
+### GenericEmployee Struct:
+```go
+type GenericEmployee struct {
+    FullName             string
+    EmailAddress         string
+    WeeksWorkedAtCompany int
+    HoursWorkedPerWeek   int
+}
+
+func (g GenericEmployee) Skills() []string {
+    panic("Not implemented -- should be overridden.")
+    return []string{}
+}
+```
+
+---
+
+## Summary
+
+- `:GoImplements` helps find struct implementations of an interface.
+- Great for navigating and debugging Go code in Vim.
+- Works best when used on **interface names** or **struct methods**.
+
+
+</textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script>
         var slideshow = remark.create();
     </script>
 </body>
-</html>
